<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="120dp"
                android:src="@drawable/black" />


            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/team_a"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/score_a"
                android:textColor="@android:color/white"
                android:textSize="50sp" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="24dp"
                        android:onClick="pointA"
                        android:text="@string/point1"
                        android:textColor="@android:color/white" />



                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="24dp"
                        android:onClick="foulA"
                        android:text="@string/foul1"

                        android:textColor="@android:color/white" />


                </LinearLayout>
            </ScrollView>


        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="350dp"
            android:layout_marginTop="180dp"
            android:background="@android:color/black">

        </View>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="120dp"
                android:src="@drawable/red" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.5dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/team_b"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/score_b"
                android:textColor="@android:color/white"
                android:textSize="50sp" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="24dp"
                        android:onClick="pointB"
                        android:text="@string/point2"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="24dp"
                        android:onClick="foulB"
                        android:text="@string/foul2"
                        android:textColor="@android:color/white" />




                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="resetScore"
        android:text="@string/reset2"
        android:textColor="@android:color/darker_gray">

    </Button>

   <!-- <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:onClick="endGame"
        android:text="End Game"
        android:textColor="@android:color/darker_gray"/> -->
</RelativeLayout>